Update theme and overall layout, experiment with Collapse, fix Transfer Value range issue in transform.py, add string value check in transform.py

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,4 @@
-.dashboard-container {
+/*.dashboard-container {
 width:1400px;
 height:800px;
 margin-left: auto;
@@ -8,13 +8,13 @@ margin-bottom: 50px;
 background-color: #483d8b;
 border: 1px solid #cccccc;
 border-radius: 10px;
-}
+}*/
 
-body {
+/*body {
 background-color: #ff7f0e;
-}
+}*/
 
-h1 {
+/*h1 {
 font-family: 'Poppins';
 color: #ffffff;
 font-size: 35px;
@@ -43,11 +43,11 @@ color: #ffffff;
 font-size: 16px;
 margin: 15px;
 text-align: justify;
-}
+}*/
 
 /* Radio-buttons */
 
-.form-check {
+/*.form-check {
     width: 100%;
     height: 38px;
     margin: 1px;
@@ -70,11 +70,11 @@ text-align: justify;
 .btn.btn-outline-light:hover {
     color: #010103;
     background-color: color-mix(in srgb, var(--bs-light), #010103 7%);
-}
+}*/
 
 /* Single button */
 
-.btn.btn-info {
+/*.btn.btn-info {
     width: 100%;
     height: 38px;
     margin: 1px;
@@ -92,13 +92,13 @@ text-align: justify;
 
 .btn.btn-info:hover {
     background-color: color-mix(in srgb, var(--bs-info), #010103 7%);
-}
+}*/
 
 
 /* Dropdowns */
 
 
-.customDropdown {
+/*.customDropdown {
     font-size: 16px;
     font-family: "Poppins";
     padding-left: 1px;
@@ -151,7 +151,7 @@ text-align: justify;
     background-color: color-mix(in srgb, var(--bs-light), #010103 7%);
     border-radius: 3px;
     color: #010103;
-}
+}*/
 
 
 .modebar { display: none !important; }
